feature: add get and patch credit by id
