# src/main/java/com/project1/ms_credit_service/CreditApiDelegateImpl.java
@@ -24,27 +24,41 @@ public class CreditApiDelegateImpl implements CreditsApiDelegate {
     @Override
     public Mono<ResponseEntity<CreditResponse>> createCredit(Mono<CreditCreateRequest> createCreditRequest, ServerWebExchange exchange) {
         return creditService.createCredit(createCreditRequest)
-                .map(c -> ResponseEntity.status(HttpStatus.CREATED).body(c));
+                .map(ResponseEntity.status(HttpStatus.CREATED)::body);
     }
 
     @Override
     public Mono<ResponseEntity<CreditCardResponse>> createCreditCredit(Mono<CreditCardCreateRequest> createCreditCardRequest, ServerWebExchange exchange) {
         return creditCardService.createCreditCard(createCreditCardRequest)
-                .map(c -> ResponseEntity.status(HttpStatus.CREATED).body(c));
+                .map(ResponseEntity.status(HttpStatus.CREATED)::body);
     }
 
     @Override
     public Mono<ResponseEntity<CreditCardResponse>> getCreditCardByCardNumber(String cardNumber, ServerWebExchange exchange) {
-        return creditCardService.getCreditCardByCardNumber(cardNumber).map(ResponseEntity::ok);
+        return creditCardService.getCreditCardByCardNumber(cardNumber)
+                .map(ResponseEntity::ok);
     }
 
     @Override
     public Mono<ResponseEntity<CreditCardResponse>> updateCreditCard(String id, Mono<CreditCardPatchRequest> patchCreditCardRequest, ServerWebExchange exchange) {
-        return creditCardService.updateCreditCard(id, patchCreditCardRequest).map(ResponseEntity::ok);
+        return creditCardService.updateCreditCard(id, patchCreditCardRequest)
+                .map(ResponseEntity::ok);
     }
 
     @Override
     public Mono<ResponseEntity<Flux<CreditCardResponse>>> getCreditCardsByCustomerId(String customerId, ServerWebExchange exchange) {
         return Mono.just(ResponseEntity.ok(creditCardService.getCreditCardsByCustomerId(customerId)));
+    }
+
+    @Override
+    public Mono<ResponseEntity<CreditResponse>> getCreditById(String id, ServerWebExchange exchange) {
+        return creditService.getCreditById(id)
+                .map(ResponseEntity::ok);
+    }
+
+    @Override
+    public Mono<ResponseEntity<CreditResponse>> updateCreditById(String id, Mono<CreditPatchRequest> creditPatchRequest, ServerWebExchange exchange) {
+        return creditService.updateCreditById(id, creditPatchRequest)
+                .map(ResponseEntity::ok);
     }
 }
